Fix overflow layout by refactoring widths
- Remove 100vw from body
- Increase header height to 9vh
- Reduce font-size of footer
- Use width 100% for main class
- Let main-body class occupy remaining space

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   --color-primary: #FBFADA;
   --color-secondary: #3F7251;
-  --header-footer-height: 7vh;
+  --header-footer-height: 9vh;
 }
 
 
@@ -15,5 +15,4 @@
 body {
   min-height: 100vh;
   background-color: var(--color-primary);
-  width: 100vw;
 }
