--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -5,9 +5,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  height: var(--header-footer-height);
   font-weight: 700;
-  font-size: 1.1rem;
+  font-size: 1rem;
+  height: var(--header-footer-height);
 }
 
 .footer-linkedin{
