--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -1,11 +1,11 @@
 .main {
   display: flex;
   min-height: calc(100vh - var(--header-footer-height));
-  width: 100vw;
+  width: 100%;
 }
 
 .aside {
-  width: clamp(270px, 25%, 300px);
+  width: clamp(270px, 20%, 300px);
   flex-shrink: 0;
   height: 100vh;
   position: sticky;
@@ -14,7 +14,7 @@
 }
 
 .main-body {
-  width: 80%;
+  flex: 1;
   background-color: green;
 }
 
